--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -180,8 +180,12 @@
         margin-left:0px;
     }
 }
-@media only screen and (max-width:460px)
+@media only screen and (max-width:480px)
 {
+    .iphoneimage
+    {
+        width: 100%;
+    }
     section
     {
         padding:25px 0;
