--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -184,7 +184,9 @@
 {
     html,body
     {
-        width:100%;
+        width:100vw;
+        height:100vh;
+        margin:0;
     }
     .iphoneimage
     {
