--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -135,6 +135,7 @@
     {
         width:100%;
         margin-left:0;
+        margin-right:0;
     }
     .section-features
     {
@@ -151,7 +152,7 @@
     .steps div
     {
         height:40px;
-        width:40px;
+        width:100px;
         font-size: 120%;
         padding: 4px;
         margin-right: 15px;
