--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -196,7 +196,7 @@
     }
     body
     {
-        margin:0px;
+        margin-right:0px;
         width:100%;
         font-size:15px;
         overflow:hidden;
