--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -221,6 +221,10 @@
     {
         font-size:50px;
     }
+    .steps-box:first-child
+    {
+        text-align: center;
+    }
     .logo
     {
         margin-left:25px; 
