--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -229,6 +229,18 @@
     {
         margin-left:25px; 
     }
+    .steps div
+    {
+        height:40px;
+        width:100px;
+        font-size: 120%;
+        padding: 4px;
+        margin-right:0px;
+    }
+    .steps
+    {
+    margin-bottom: 20px;
+    }
     .section-form div
     {
     margin-bottom: 4px;
