--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -179,8 +179,11 @@
         margin-left:0px;
     }
 }
-@media only screen and (max-width:600px)
+@media only screen and (max-width:430px)
 {
+    .col{
+        width:100%;
+    }
      html,body
     {
         width:auto;
