--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -179,7 +179,7 @@
         margin-left:0px;
     }
 }
-@media only screen and (max-width:430px)
+/*@media only screen and (max-width:430px)
 {
     .col{
         width:100%;
@@ -233,4 +233,4 @@
     {
     margin-bottom: 4px;
     }
-}
+}*/
