--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,8 @@
 *{
     margin:0;
     padding:0;
+    height:100%;
+    width:100%;
     -webkit-box-sizing:border-box;
     box-sizing:border-box;
 }
