--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -179,7 +179,7 @@
         margin-left:0px;
     }
 }
-@media only screen and (max-width:430px)
+@media only screen and (max-width:370px)
 {
     .col 
     {
@@ -187,7 +187,8 @@
     }
      html,body
     {
-        width:auto;
+        width:100%;
+        height:100%;
     }
     .iphoneimage
     {
