--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -187,12 +187,7 @@
     }
      html,body
     {
-        width:100vw;
-        height:100vh;
-        padding:0;
-        margin:0;
-        display:flex;
-        justify-content:center;
+        width:auto;
     }
     .iphoneimage
     {
